# fmcomposer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: globalFunctions.cpp  globalFunctions.hpp  lang.cpp  main.cpp
src/compat/: Clipboard.hpp
src/gui/: gui.cpp
src/gui/list/: list.cpp
src/gui/textfield/: textfield.cpp
src/input/: noteInput.hpp
src/midi/: midi.h  midi_import.cpp  midi_realtime.cpp
src/views/instrument/: instrEditor.cpp  instrEditor.hpp
src/views/pattern/: songEditor_patternEdit.cpp  songEditor_patternList.cpp  songEditor_shortcuts.cpp
src/views/settings/: configEditor.cpp  configEditor_recentSongs.cpp
